k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoreo-api
  namespace: default
  labels:
    app: monitoreo-api
spec:
  replicas: 2 # number of pods
  template:
    metadata:
      labels:
        app: monitoreo-api
    spec:
      containers:
        - name: monitoreo-api
          image: us.gcr.io/skillful-figure-271013/monitoreo-api
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
