k8s/postgres.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-monitoreo
spec:
  template:
    metadata:
      labels:
        app: postgres-monitoreo
    spec:
      volumes:
        - name: postgres-storage-monitoreo
          persistentVolumeClaim:
            claimName: postgres-pv-claim-monitoreo
      containers:
        - image: postgres:10
          name: postgres-monitoreo
          ports:
            - containerPort: 5432
              name: pg-monitoreo
          volumeMounts:
            - name: postgres-storage-monitoreo
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-monitoreo
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres-monitoreo
