k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoreo-api
spec:
  selector:
    app: monitoreo-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
